--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -207,6 +207,21 @@
                 <p>News</p>
                 <a href="#">Mark McGuinness Cardif City</a>
             </div>
+            <div class="newsCard">
+                <img src="../images/news/player3.jpg" alt="Daniel Oyegoke">
+                <p>News</p>
+                <a href="#">Mark McGuinness Cardif City</a>
+            </div>
+            <div class="newsCard">
+                <img src="../images/news/player3.jpg" alt="Daniel Oyegoke">
+                <p>News</p>
+                <a href="#">Mark McGuinness Cardif City</a>
+            </div>
+            <div class="newsCard">
+                <img src="../images/news/player3.jpg" alt="Daniel Oyegoke">
+                <p>News</p>
+                <a href="#">Mark McGuinness Cardif City</a>
+            </div>
         </section>
     </main>
 <!-- Main Section with player card, highlights and news part -->
