--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -195,7 +195,7 @@
             <div class="newsCard">
                 <img src="../images/news/player1.jpg" alt="Daniel Oyegoke">
                 <p>News</p>
-                <a href="#">Daniel Oyegoke Joins Brenford</a>
+                <a href="https://www.arsenal.com/news/daniel-oyegoke-joins-brentford">Daniel Oyegoke Joins Brenford</a>
             </div>
             <div class="newsCard">
                 <img src="../images/news/player2.jpg" alt="Daniel Ballard">
@@ -205,23 +205,24 @@
             <div class="newsCard">
                 <img src="../images/news/player3.jpg" alt="Daniel Oyegoke">
                 <p>News</p>
-                <a href="#">Mark McGuinness Cardif City</a>
+                <a href="https://www.cardiffcityfc.co.uk/news/done-deal-mark-mcguinness-joins-bluebirds">Mark McGuinness Cardif City</a>
             </div>
             <div class="newsCard">
                 <img src="../images/news/player3.jpg" alt="Daniel Oyegoke">
                 <p>News</p>
-                <a href="#">Mark McGuinness Cardif City</a>
+                <a href="https://www.cardiffcityfc.co.uk/news/done-deal-mark-mcguinness-joins-bluebirds">Mark McGuinness Cardif City</a>
             </div>
             <div class="newsCard">
                 <img src="../images/news/player3.jpg" alt="Daniel Oyegoke">
                 <p>News</p>
-                <a href="#">Mark McGuinness Cardif City</a>
+                <a href="https://www.cardiffcityfc.co.uk/news/done-deal-mark-mcguinness-joins-bluebirds">Mark McGuinness Cardif City</a>
             </div>
             <div class="newsCard">
                 <img src="../images/news/player3.jpg" alt="Daniel Oyegoke">
                 <p>News</p>
-                <a href="#">Mark McGuinness Cardif City</a>
+                <a href="https://www.cardiffcityfc.co.uk/news/done-deal-mark-mcguinness-joins-bluebirds">Mark McGuinness Cardif City</a>
             </div>
+            
         </section>
     </main>
 <!-- Main Section with player card, highlights and news part -->
