--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -229,7 +229,7 @@
 <!-- Footer section with logo and copyright info     -->
     <footer id="footer">
         <section class="footer-logo">
-            <img src="../responsive-football-main/images/Logo.png" alt="">
+            <img src="../images/Logo.png" alt="">
         </section>
         <section class="footer-social-icon">
             <div class="icon"><i class="fab fa-instagram"></i></div>
