--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -44,7 +44,7 @@
     </header>
 <!-- Header Section with Navigation and Banner -->
 <!-- Main Section with player card, highlights and news part -->
-    <main id=main_contanier>
+    <main id="main_contanier">
         <section class="player-cards">
             <div class="card">
                 <img src="../images/players/player-1.png" alt="">
